# HoloLensNavigationForRobots

./: .gitignore  README.md
Setup/: CONFIGURATION.md  MAP.md  MAP_GENERATION.md  MountHololens.md  README.md  SETUP.md  TIPS.md
docs/: 404.html  README.md  index.html  sitemap.xml
docs/CODE_OF_CONDUCT/: index.html
docs/SECURITY/: index.html
docs/SUPPORT/: index.html
docs/Setup/: MAP_GENERATION.md  index.html
docs/Setup/CONFIGURATION/: index.html
docs/Setup/MAP/: index.html
docs/Setup/MAP_GENERATION/: index.html
docs/Setup/MountHololens/: index.html
docs/Setup/SETUP/: index.html
docs/linux/HoloROSBridge/: CMakeLists.txt  package.xml
docs/linux/holo_nav_dash/: holo_nav_dash.py  index.html  settings.py  webSocket.py
docs/rviz/: pepper.rviz
docs/search/: search_index.json
docs/windows/MSRHoloLensSpatialMapping/: AppView.cpp  AppView.h  MSRHoloLensSpatialMapping.cpp  MSRHoloLensSpatialMapping.vcxproj.filters  Miscellaneous.h  SpatialAnchor.h
linux/HoloLens_Localization/: CMakeLists.txt  package.xml
linux/HoloLens_Localization/include/anchor_localizer/: ICP_module.h
linux/HoloLens_Localization/include/static_calibration/: cost_function.h
linux/HoloLens_Localization/scripts/: dynamic_adjuster.py  localizer.py
linux/HoloLens_Localization/src/anchor_localizer/: ICP_module.cpp  main.cpp
linux/HoloLens_Localization/src/static_calibration/: calibration.cpp  cost_function.cpp  teleop.cpp
linux/HoloROSBridge/include/: funcs.h
linux/HoloROSBridge/src/: funcs.cpp
linux/holo_nav_dash/: CMakeLists.txt  README.md  package.xml  requirements.txt
linux/hololens_ros_bridge/src/: hololens_ros_bridge_node.cpp
linux/navigation_launcher/: CMakeLists.txt  package.xml
linux/navigation_launcher/config/: costmap_common.yaml
linux/navigation_launcher/launch/: hololensstack.launch  navstack.launch
linux/navigation_launcher/params/: map.yaml
rviz/: pepper_nav.rviz
windows/: MSRHoloLensSpatialMapping.sln
windows/MSRHoloLensSpatialMapping/: MSRHoloLensSpatialMapping.vcxproj  MSRHoloLensSpatialMappingMain.cpp  MSRHoloLensSpatialMappingMain.h  Miscellaneous.cpp  Package.appxmanifest  SpatialAnchor.cpp  pch.h
windows/MSRHoloLensSpatialMapping/Common/: CameraResources.cpp  (+1 more)
(+115 files in other folders)
