<?xml version="1.0"?>
<package>
  <name>holo_nav_dash</name>
  <version>1.0.0</version>
  <description>HoloLens Navigation Dashboard.</description>

  <maintainer email="dbaum@microsoft.com">David Baumert</maintainer>

  <license>BSD</license>

  <url type="website">https://dev.azure.com/msresearch/Robotics/_git/hololens_navigation2</url>

  <author>David Baumert</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
